--- a/cafe-management-system-fe/src/app/material-component/manage-category/manage-category.component.html
+++ b/cafe-management-system-fe/src/app/material-component/manage-category/manage-category.component.html
@@ -1,20 +1,21 @@
 <mat-card>
-    <b><span>Manage category</span></b>
-    <button mat-falt-button-color="primary" class="float-right" (click)="handleAddAction()">
-        <mat-icon>add_circle</mat-icon> Add category
+    <b><span>Manage Category</span></b>
+    <button mat-flat-button color="primary" class="float-right" (click)="handleAddAction()">
+        <mat-icon>add_circle</mat-icon> Add Category
     </button>
 </mat-card>
+
 <hr>
+
 <mat-card>
     <mat-form-field appearance="standard">
         <mat-label>Filter</mat-label>
         <input matInput (keyup)="applyFilter($event)" #input>
     </mat-form-field>
 </mat-card>
-<hr>
 
 <div class="responsive_table">
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">7
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef>Name</th>
             <td mat-cell *matCellDef="let element">{{element.name}}</td>
@@ -23,11 +24,13 @@
         <ng-container matColumnDef="edit">
             <th mat-header-cell *matHeaderCellDef>Action</th>
             <td mat-cell *matCellDef="let element" class="action-link">
-                <button mat-icon-button color="primary" matTooltip="Edit" (click)="handleEditAction(element)"></button>
+                <button mat-icon-button color="primary" matToolTip="Edit" (click)="handleEditAction(element)">
+                    <mat-icon>edit</mat-icon>
+                </button>
             </td>
         </ng-container>
 
-        <tr mat-hader-row *matHeaderRowDef="displayedColumns; sticky:true"></tr>
-        <tr mat-row *matRowDef="let row; columns:displayedColumns;"></tr>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns;sticky:true"></tr>
+        <tr mat-row *matRowDef="let row;columns:displayedColumns;"></tr>
     </table>
 </div>
