--- a/cafe-management-system-fe/src/app/material-component/manage-category/manage-category.component.scss
+++ b/cafe-management-system-fe/src/app/material-component/manage-category/manage-category.component.scss
@@ -1,5 +1,5 @@
 .float-right{
-    float:right;
+    float: right;
 }
 
 mat-card{
@@ -12,5 +12,5 @@ table{
 
 ::ng-deep .highlight{
     color: white;
-    background: #673ab7;
+    background: #673AB7;
 }
