--- a/cafe-management-system-fe/src/app/material-component/manage-category/manage-category.component.html
+++ b/cafe-management-system-fe/src/app/material-component/manage-category/manage-category.component.html
@@ -22,10 +22,13 @@
         </ng-container>
 
         <ng-container matColumnDef="edit">
-            <th mat-header-cell *matHeaderCellDef>Action</th>
+            <th mat-header-cell *matHeaderCellDef>Edit</th>
             <td mat-cell *matCellDef="let element" class="action-link">
                 <button mat-icon-button color="primary" matToolTip="Edit" (click)="handleEditAction(element)">
                     <mat-icon>edit</mat-icon>
+                </button>
+                <button mat-icon-button color="primary" matToolTip="Delete" (click)="handleDeleteAction(element)">
+                    <mat-icon>delete</mat-icon>
                 </button>
             </td>
         </ng-container>
