--- a/cafe-management-system-fe/src/app/material-component/dialog/confirmation/confirmation.component.html
+++ b/cafe-management-system-fe/src/app/material-component/dialog/confirmation/confirmation.component.html
@@ -9,7 +9,7 @@
 </mat-toolbar>
 
 <mat-dialog-content class="mat-typography">
-    <h6>Are you sure want to {{details.message}}</h6>
+    <h4>Are you sure want to {{details.message}}?</h4>
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
