--- a/cafe-management-system-fe/src/app/material-component/dialog/change-password/change-password.component.html
+++ b/cafe-management-system-fe/src/app/material-component/dialog/change-password/change-password.component.html
@@ -56,14 +56,15 @@
                 </mat-error>
                 <mat-hint *ngIf="validateSubmit() && !(changePasswordForm.controls.confirmPassword.invalid)">
                     <span>New password & Confirm password does not match.</span>
-                </mat-hint> 
+                </mat-hint>
             </mat-form-field>
         </div>
     </form>
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
-    <button mat-raised-button color="primary" type="submit" (click)="handlePasswordChangeSubmit()" [disabled]="validateSubmit() && (changePasswordForm.valid && changePasswordForm.dirty)">
+    <button mat-raised-button color="primary" type="submit" (click)="handlePasswordChangeSubmit()"
+        [disabled]="validateSubmit() && (changePasswordForm.valid && changePasswordForm.dirty)">
         <mat-icon>save</mat-icon> Update
     </button>
     <button mat-raised-button color="warn" mat-dialog-close>
