--- a/cafe-management-system-fe/src/app/material-component/view-bill/view-bill.component.html
+++ b/cafe-management-system-fe/src/app/material-component/view-bill/view-bill.component.html
@@ -45,7 +45,8 @@
                     <mat-icon>visibility</mat-icon>
                 </button>
 
-                <button mat-icon-button color="primary" matToolTip="Download bill" (click)="downloadReportAction(element)">
+                <button mat-icon-button color="primary" matToolTip="Download bill"
+                    (click)="downloadReportAction(element)">
                     <mat-icon>summarize</mat-icon>
                 </button>
 
