--- a/cafe-management-system-fe/src/app/material-component/dialog/category/category.component.html
+++ b/cafe-management-system-fe/src/app/material-component/dialog/category/category.component.html
@@ -25,7 +25,8 @@
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
-    <button mat-raised-button color="primary" type="submit" (click)="handleSubmit()" [disabled]="!(categoryForm.valid && categoryForm.dirty)">
+    <button mat-raised-button color="primary" type="submit" (click)="handleSubmit()"
+        [disabled]="!(categoryForm.valid && categoryForm.dirty)">
         <mat-icon>save</mat-icon> {{action}}
     </button>
     <button mat-raised-button color="warn" mat-dialog-close><mat-icon>cancel</mat-icon>Close</button>
