--- a/cafe-management-system-fe/src/app/material-component/dialog/product/product.component.html
+++ b/cafe-management-system-fe/src/app/material-component/dialog/product/product.component.html
@@ -46,7 +46,8 @@
                 <mat-form-field appearance="standard" fxFlex>
                     <mat-label>Description</mat-label>
                     <input matInput formControlName="description" required>
-                    <mat-error *ngIf="productForm.controls.description.touched && productForm.controls.description.invalid">
+                    <mat-error
+                        *ngIf="productForm.controls.description.touched && productForm.controls.description.invalid">
                         <span *ngIf="productForm.controls.description.errors.required">This field is mandatory.</span>
                         <span *ngIf="productForm.controls.description.errors.pattern">This field is invalid</span>
                     </mat-error>
@@ -57,7 +58,8 @@
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
-    <button mat-raised-button color="primary" type="submit" (click)="handleSubmit()" [disabled]="!(productForm.valid && productForm.dirty)">
+    <button mat-raised-button color="primary" type="submit" (click)="handleSubmit()"
+        [disabled]="!(productForm.valid && productForm.dirty)">
         <mat-icon>save</mat-icon> {{action}}
     </button>
     <button mat-raised-button color="warn" mat-dialog-close><mat-icon>cancel</mat-icon>Close</button>
