--- a/cafe-management-system-fe/src/app/material-component/manage-order/manage-order.component.html
+++ b/cafe-management-system-fe/src/app/material-component/manage-order/manage-order.component.html
@@ -79,8 +79,7 @@
                 <mat-form-field appearance="standard" fxFlex>
                     <mat-label>Product</mat-label>
                     <mat-select formControlName="product" (selectionChange)="getDetails($event.value)">
-                        <mat-option *ngFor="let product of products"
-                            [value]="product">{{product.name}}</mat-option>
+                        <mat-option *ngFor="let product of products" [value]="product">{{product.name}}</mat-option>
                     </mat-select>
                 </mat-form-field>
 
@@ -96,7 +95,8 @@
                 <mat-form-field appearance="standard" fxFlex>
                     <mat-label>Quantity</mat-label>
                     <input matInput formControlName="quantity" required (keyup)="setQuantity($event)" #input>
-                    <mat-error *ngIf="manageOrderForm.controls.quantity.touched && manageOrderForm.controls.quantity.invalid">
+                    <mat-error
+                        *ngIf="manageOrderForm.controls.quantity.touched && manageOrderForm.controls.quantity.invalid">
                         <span *ngIf="manageOrderForm.controls.quantity.errors.required">This field is mandatory.</span>
                         <span *ngIf="manageOrderForm.controls.quantity.errors.pattern">This field is invalid.</span>
                     </mat-error>
@@ -110,7 +110,7 @@
                         <span *ngIf="manageOrderForm.controls.total.errors.pattern">This field is invalid.</span>
                     </mat-error>
                 </mat-form-field>
-                
+
             </div>
         </div>
     </form>
